--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,7 @@
         "libraryName": "antd",
         "libraryDirectory": "es",
         "style": "css" // `style: true` 会加载 less 文件
-      }]
+      }],
+      "syntax-dynamic-import"
     ]
   }
