--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-import": "^1.11.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.2",
